# libAyts

./: .gitignore  CMakeLists.txt  README.md  dummy.c
Module/: manifest.json
include/Ayts/: Cmt.h  CmtUnit.h  Mdl.h
src/: Cmt.c  CmtUnit.c  Mdl.c
